fix popup jumping on mobile devices

--- a/src/blocks/popup/popup.css
+++ b/src/blocks/popup/popup.css
@@ -2,16 +2,15 @@
   display: flex;
 
   position: fixed;
+
   top: 0;
   right: 0;
-  bottom: 0;
   left: 0;
 
   margin: auto;
 
   max-width: calc(100vw - 19px*2);
-
-  align-items: flex-start;
+  min-height: 100vh;
 
   visibility: hidden;
   opacity: 0;
@@ -25,10 +24,13 @@
   content: '';
   
   position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
+
+  top: -50%;
+  right: -50%;
+  bottom: -50%;
+  left: -50%;
+
+  overflow: visible;
 
   z-index: -1;
 
